--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#107c41">
-    <link rel="apple-touch-icon" href="icon-192.png">
+    <link rel="apple-touch-icon" href="logo.png">
+    <link rel="icon" href="logo.png">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
                 <div class="checkbox-group">
                     <label class="checkbox-label">
                         <input type="checkbox" id="normal">
-                        Horario Normal
+                        Dia Trabajado
                     </label>
                     <label class="checkbox-label">
                         <input type="checkbox" id="guard">
@@ -59,6 +60,18 @@
                     <div class="form-group">
                         <label for="travel">Hora Viaje</label>
                         <input type="number" id="travel" step="0.5" min="0" placeholder="0">
+                    </div>
+                </div>
+
+                <!-- New Night Hours Inputs -->
+                <div class="form-row two-cols">
+                    <div class="form-group">
+                        <label for="hr50n">HR 50% N</label>
+                        <input type="number" id="hr50n" step="0.5" min="0" placeholder="0">
+                    </div>
+                    <div class="form-group">
+                        <label for="hr100n">HR 100% N</label>
+                        <input type="number" id="hr100n" step="0.5" min="0" placeholder="0">
                     </div>
                 </div>
 
@@ -88,7 +101,7 @@
             <h2>Totales Mensuales</h2>
             <div class="stats-grid compact-grid">
                 <div class="stat-item">
-                    <div class="stat-label">Normal (Días)</div>
+                    <div class="stat-label">Dia Trabajado</div>
                     <div class="stat-value" id="totalNormal">0</div>
                 </div>
                 <div class="stat-item">
@@ -102,6 +115,14 @@
                 <div class="stat-item">
                     <div class="stat-label">Hs Viaje</div>
                     <div class="stat-value" id="totalTravel">0</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-label">HR 50% N</div>
+                    <div class="stat-value" id="total50n">0</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-label">HR 100% N</div>
+                    <div class="stat-value" id="total100n">0</div>
                 </div>
                 <div class="stat-item">
                     <div class="stat-label">Vianda 8Hs</div>
@@ -137,10 +158,12 @@
                             <th>HR 50%</th>
                             <th>HR 100%</th>
                             <th>H. Viaje</th>
-                            <th>Vianda 8</th>
-                            <th>Vianda 10</th>
-                            <th>Guardia</th>
-                            <th>F.C.</th>
+                            <th>50% N</th>
+                            <th>100% N</th>
+                            <th>V8</th>
+                            <th>V10</th>
+                            <th>G</th>
+                            <th>FC</th>
                             <th>Obs.</th>
                             <th class="no-print"></th>
                         </tr>
